# clarkwaylife

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
include/: dbg.hpp  exceptions.hpp  file_strings.hpp  includes.hpp
include/engine/: CSprite.hpp  Components.hpp  EngineObj.hpp  Entity.hpp  Renderer.hpp  Sprite.hpp  State.hpp  StateSystem.hpp  TextureManager.hpp  dbg.hpp  engine.hpp  engine_includes.hpp
include/engine/ECS/: Entity.hpp  ecsComponent.hpp  ecsManager.hpp
include/engine/ECS/systems/: cAudio.hpp  cCollider.hpp  cPosition.hpp  cSprite.hpp  ecsCollision.hpp  ecsLighting.hpp  ecsRenderer.hpp
include/engine/ecs/: ComponentManager.hpp
include/engine/ecs/systems/: ecsAudio.hpp  ecsPhysics.hpp
include/engine/gobjects/: GameObject.hpp  RenderObject.hpp
include/engine/managers/: EntityManager.hpp  EventManager.hpp  InputManager.hpp  SoundManager.hpp  TextureManager.hpp
include/engine/systems/: AiSystem.hpp  AnimationSystem.hpp  AudioSystem.hpp  CollisionSystem.hpp  ComponentSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  ScriptSystem.hpp
include/game/: GameState.hpp  states.hpp
src/: main.cpp
src/engine/: .StateSystem.cpp.swp  CMakeLists.txt  CSprite.cpp  EngineObj.cpp  Renderer.cpp  Sprite.cpp  State.cpp  StateSystem.cpp  TextureManager.cpp
src/engine/gobjects/: RenderObject.cpp
src/engine/managers/: EntityManager.cpp
src/engine/systems/: ScriptSystem.cpp
src/game/: CMakeLists.txt  GameState.cpp
src/tests/: CMakeLists.txt  test_EntityManager.cpp
